samples/_failures_safe/1761542573_1dfd01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ed39d19.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_7ed39d19.c:147:22: error: expected ‘;’ at end of input
  147 |         lexer->column
      |                      ^
      |                      ;
./samples/SAFE/__tmp_7ed39d19.c:147:9: error: expected declaration or statement at end of input
  147 |         lexer->column
      |         ^~~~~
./samples/SAFE/__tmp_7ed39d19.c:147:9: error: expected declaration or statement at end of input
